# openpgp-interoperability-test-suite

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  config.json.dist  sop.md
data/certificates/: alice-revocation.pgp  bob-revocation.pgp  carol-secret.pgp  ricarda-secret.pgp
data/messages/: 7C2FAA4DF93C37B2.IDEA.pgp  alice-kdf-primary.pgp  alice-kdf-subkey.pgp  shattered-1.pdf.asc  shattered-2.pdf.asc  shattered-baseline.asc
data/revoked-key/: README  revoked-key-cert-not-revoked.pgp  revoked-key-cert-revoked-compromised.pgp  revoked-key-cert-revoked-compromised.sk.pgp  revoked-key-cert-revoked-key_retired.pgp  revoked-key-cert-revoked-key_retired.sk.pgp  revoked-key-cert-revoked-no_subpacket.pgp  revoked-key-cert-revoked-no_subpacket.sk.pgp  revoked-key-cert-revoked-private.pgp  revoked-key-cert-revoked-private.sk.pgp  revoked-key-cert-revoked-superseded.pgp  revoked-key-cert-revoked-superseded.sk.pgp  revoked-key-cert-revoked-uid_retired.pgp  revoked-key-cert-revoked-uid_retired.sk.pgp  revoked-key-cert-revoked-unknown.pgp  revoked-key-cert-revoked-unknown.sk.pgp  revoked-key-cert-revoked-unspecified.pgp  revoked-key-cert-revoked-unspecified.sk.pgp  revoked-key-sig-t0.pgp  revoked-key-sig-t0.sk.pgp  revoked-key-sig-t1-t2.pgp  revoked-key-sig-t1-t2.sk.pgp  revoked-key-sig-t2-t3.pgp  revoked-key-sig-t2-t3.sk.pgp  revoked-key-sig-t3-now.pgp  revoked-key-sig-t3-now.sk.pgp
data/rsa-keys/: 16k.pgp  32k.pgp
data/short-rsa-sigs/: 3048-bit.sig  3053-bit.sig  3054-bit.sig  3055-bit.sig  3056-bit.sig  3058-bit.sig  3059-bit.sig  3061-bit.sig  3062-bit.sig  3063-bit.sig  3064-bit.sig  3065-bit.sig  3067-bit.sig  3068-bit.sig  3070-bit.sig  3071-bit.sig  3072-bit.sig
examples/: short-rsa.rs
glue/: gpg  pgpy  sop.py
src/: config.rs  data.rs  dkgpg.rs  generic.rs  gnupg.rs  main.rs  plan.rs  progress_bar.rs  rnp.rs  sop.rs  sq.rs  templates.rs  tests.rs  types.rs
src/tests/: armor.rs  asymmetric_encryption.rs  certificates.rs  compression.rs  detached_signature.rs  detached_signatures.rs  ecc.rs  hashes.rs  inline_signatures.rs  key_generation.rs  messages.rs  mod.rs  packet_parser.rs  symmetric_encryption.rs  templates.rs
src/tests/armor/: concatenated_armor.rs  mangled.rs
src/tests/asymmetric_encryption/: corner_cases.rs  recipient_ids.rs  rsa_key_sizes.rs
src/tests/certificates/: binding_signature_subpackets.rs  concatenated_armor.rs  detached_primary.rs  expiration.rs  im_my_own_grandpa.rs  key_flags_composition.rs  mock_mceliece.rs  perturbed_certs.rs  primary_key_binding.rs  revoked_key.rs  temporary_validity.rs
src/tests/detached_signatures/: digest_prefix.rs  (+2 more)
talks/2021-03-11-ietf-110/: openpgp-interoperability-test-suite.org
templates/: base.html  hall-of-fame.inc.html  how-to.inc.html  report.html  results.html  search.js  section.inc.html  test-matrix.inc.html
templates/tests/: hall-of-fame.inc.html  how-to.inc.html  report.html  test-matrix.inc.html
(+13 files in other folders)
