[package]
name = "openpgp-interoperability-test-suite"
version = "0.1.0"
authors = ["Justus Winter <justus@sequoia-pgp.org>"]
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/openpgp-interoperability-test-suite"
readme = "README.md"
keywords = ["openpgp", "interoperability", "tests", "encryption", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = { version = "0.12" }
lazy_static = "1.4"
rayon = "1.2"
rlimit = "0.2.1"
sequoia-openpgp = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"
tera = "0.11"
thiserror = "1"
time = "0.1"

[build-dependencies]
vergen = "3"
